# Disruptor-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json
Disruptor/: BlockingWaitStrategy.cpp  BlockingWaitStrategy.h  BuildConfig.h  CMakeLists.txt  RoundRobinThreadAffinedTaskScheduler.cpp  RoundRobinThreadAffinedTaskScheduler.h  SpinWaitWaitStrategy.h  TimeoutBlockingWaitStrategy.cpp  TimeoutBlockingWaitStrategy.h  TypeInfo.cpp  TypeInfo.h  stdafx.h
Disruptor.PerfTests/: CMakeLists.txt  LatencyTestSession.cpp  LatencyTestSessionResult.cpp  LatencyTestSessionResult.h  OneToOneRawBatchThroughputTest.cpp  OneToOneRawBatchThroughputTest.h  OneToOneRawThroughputTest.cpp  OneToOneRawThroughputTest.h  OneToThreeSequencedThroughputTest.cpp  PerfTestUtil.cpp  TestRepository.cpp  ThroughputTestSession.cpp  ThroughputTestSessionResult.cpp  ThroughputTestSessionResult.h  ValueMutationEventHandler.cpp  ValueMutationEventHandler.h  main.cpp  stdafx.h
Disruptor.TestTools/: CMakeLists.txt  LatencyRecorder.cpp  LatencyRecorder.h  Stopwatch.cpp  Stopwatch.h  stdafx.h
Disruptor.Tests/: AggregateEventHandlerTests.cpp  AggregateEventHandlerTestsFixture.cpp  AggregateEventHandlerTestsFixture.h  AtomicReference.h  BatchEventProcessorTests.cpp  BatchEventProcessorTestsFixture.cpp  BatchEventProcessorTestsFixture.h  BatchingTests.cpp  BusySpinWaitStrategyTests.cpp  CMakeLists.txt  ConsumerRepositoryTests.cpp  ConsumerRepositoryTestsFixture.cpp  ConsumerRepositoryTestsFixture.h  DelayedEventHandler.cpp  DelayedEventHandler.h  DisruptorFixture.cpp  DisruptorFixture.h  DisruptorStressTest.cpp  DisruptorTests.cpp  EventPollerTests.cpp  EventPublisherTests.cpp  FatalExceptionHandlerTests.cpp  FixedSequenceGroupTest.cpp  IgnoreExceptionHandlerTests.cpp  LifecycleAwareTests.cpp  MultiProducerSequencerTests.cpp  RingBufferTests.cpp  RingBufferTestsFixture.cpp  RingBufferTestsFixture.h  RingBufferWithMocksTest.cpp  SequenceBarrierTests.cpp  SequenceBarrierTestsFixture.cpp  SequenceBarrierTestsFixture.h  SequenceReportingCallbackTests.cpp  SequencerFixture.h  SequencerTests.cpp  SleepingWaitStrategyTests.cpp  SpinWaitWaitStrategyTests.cpp  StubExecutor.cpp  StubExecutor.h  (+12 more)
googletest-release-1.8.0/googletest/cmake/: internal_utils.cmake
